force-app/main/default/objects/Project_Member__c.object
<CustomObject>
    <description>Junction between Project and User to create members of projects.  Used to manage sharing and access to a project.</description>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Used exclusively by the &quot;Imhotep - Template - Use Template&quot; flow to display a table of projects.</description>
        <formula>Project__r.Name</formula>
        <inlineHelpText>Used exclusively by the &quot;Imhotep - Template - Use Template&quot; flow to display a table of projects.</inlineHelpText>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>Used exclusively by the &quot;Imhotep - Template - Use Template&quot; flow to display a table of projects.</description>
        <formula>TEXT(Project__r.Type__c)</formula>
        <inlineHelpText>Used exclusively by the &quot;Imhotep - Template - Use Template&quot; flow to display a table of projects.</inlineHelpText>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Members</relationshipLabel>
        <relationshipName>Project_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner/Lead</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>Viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Role__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Members</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>